# mem0-mcp-server

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
charts/mem0-mcp-server/: Chart.yaml  values.yaml
charts/mem0-mcp-server/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
clients/: __init__.py  mcp_tool_tester.py
config/: settings.json
doc/api/: README.md  config_loader.md  config_settings.md  lifespan.md  mcp_server_init.md  memory_manager.md  safe_logger.md  tools_add_memory.md  tools_search_memories.md  transport.md
doc/architecture/: README.md  components.md  overview.md
doc/deployment/: docker-compose.md
doc/examples/: README.md  advanced_usage.md  basic_usage.md
doc/patterns/: README.md  async_context_manager.md  fastmcp_singleton.md  multi_tenant_isolation.md  repository_pattern.md  safe_logger.md  transport_strategy.md
scripts/: wait-for-ollama.sh
src/mcp_server/: __init__.py  lifespan.py  main.py  prompts.py  transport.py
src/mcp_server/config/: __init__.py  loader.py  settings.py
src/mcp_server/config/examples/: 01-redis-default.json  02-elasticsearch-cloud.json  03-azure-ai-search.json  04-valkey-hnsw.json  05-s3-vectors.json  06-redis-anthropic.json  07-redis-azure-openai.json  08-qdrant-gemini.json  09-chroma-groq.json  10-pgvector-deepseek.json  11-milvus-aws-bedrock.json  12-pinecone-xai.json  13-mongodb-together.json  14-weaviate-litellm.json  15-faiss-lmstudio.json  16-opensearch-vllm.json  17-upstash-vector-huggingface.json  18-valkey-minimax.json  19-s3-vectors-ollama.json  20-redis-azure-openai-embedder.json  21-qdrant-gemini-embedder.json  (+9 more)
src/mcp_server/memory/: __init__.py  lifespan.py  manager.py
src/mcp_server/tools/: __init__.py  add_memory.py  delete_memory.py  erase_memories.py  get_memory.py  list_memories.py  search_memories.py  update_memory.py
src/mcp_server/utils/: __init__.py  health.py  safe_logger.py
tests/: __init__.py  conftest.py  test_add_memory.py  test_config_loader.py  test_delete_memory.py  test_embedder_config.py  test_erase_memories.py  test_get_memory.py  test_list_memories.py  test_llm_config.py  test_main.py  test_mcp_server.py  test_memory_manager.py  test_memory_manager_lifecycle.py  test_memory_manager_multitenant.py  test_memory_manager_search.py  test_parameter_precedence.py  test_prompts.py  test_reranker_config.py  test_search_memories.py  test_settings.py  test_update_memory.py  test_vector_store_flexibility.py
tests/integration/: test_mcp_sse_redis.py  test_reranker_integration.py
tests/transport/: test_health_check.py  test_safe_logger.py  test_sse_transport.py  test_transport_selection.py
