[project]
name = "mem0-mcp-server"
version = "1.0.0"
description = "MCP server exposing Mem0 API for AI agents"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Mem0 Team" }
]
keywords = ["mcp", "mem0", "ai", "memory", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp>=3.2.4",
    "mem0ai[nlp]>=2.0.0,<3.0.0",
    "sentence-transformers>=5.0.0",
    "nltk>=3.8.0",
    "ollama>=0.3.0",
    "pydantic>=2.0.0",
    "redis>=5.0.0",
    "redisvl>=0.1.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "pyright>=1.1.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
mem0-mcp = "mcp_server.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]

[tool.pytest]
# FR-24: Test execution configuration for UT-1 through UT-10
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Async test support (IC-2: pytest-asyncio for async tests)
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Output and reporting
addopts = ["-v", "--tb=short"]

# Filtering warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Markers for test categorization
markers = [
    "asyncio: mark test as async",
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow running tests",
]

[tool.ruff]
# Linting configuration
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.pyright]
# Type checking configuration
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
